<resources>
    <string name="app_name">Dinner</string>
    <string name="app_title">winner winner chicken dinner</string>

    <string name="login_username">Username:</string>
    <string name="login_password">Password:</string>
    <string name="register_name">Name:</string>
    <string name="register_email">Email:</string>
    <string name="register_password">Password:</string>
    <string name="login_login_btn">Login</string>
    <string name="login_register_btn">Register</string>

</resources>
